<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?android:colorPrimaryDark"
              android:orientation="vertical"
              tools:context=".activity.MainActivity">

    <TextView
            style="@style/kroov_titlex"
            android:text="@string/app_name"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="50dp">

            <TextView
                    style="@style/kroov_separator"
                    android:text="@string/asb__general"/>

            <LinearLayout
                    style="@style/kroov_drawerx"
                    android:onClick="_permissions">

                <TextView
                        style="@style/kroov_name"
                        android:text="@string/abs__permissions"/>

                <TextView
                        style="@style/kroov_description"
                        android:text="@string/txt__description_permissions"/>

            </LinearLayout>

            <View style="@style/kroov_split"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>